# ProjectTemplate

./: .clang-format  .gitignore  CMakeLists.txt
cmake_scripts/: include_compiler_options.cmake  include_database.cmake  include_output_options.cmake
config/: main_settings.conf  path.conf
devops/: format_all_files.bat
libraries/: CMakeLists.txt  libraries.cmake
libraries/CPUTime/: CPUTime_sources.cmake  getCPUTime.hpp
libraries/SQLite/: CMakeLists.txt
resources/: test.test
resources/output/: test.test  test2.test2
sources/: CMakeLists.txt  sources.cmake
sources/algorithms/: algorithms_sources.cmake  suffix_tree.cpp  suffix_tree.hpp
sources/code/: generate_code.cpp
sources/core/: CMakeLists.txt  core.cpp  core.hpp  core_sources.cmake  main.cpp
sources/database/: base_database.hpp  database.cpp  database.hpp  database_query.cpp  database_query.hpp  database_sources.cmake  empty_database.cpp  empty_database.hpp  postgresql.cpp  postgresql.hpp  sqlite_database.cpp  sqlite_database.hpp  submission_info.hpp
sources/domain/: CMakeLists.txt  cyrillic.cpp  cyrillic.hpp  dom_error_message.cpp  dom_error_message.hpp  dom_file_manager.cpp  dom_file_manager.hpp  dom_pair.hpp  dom_path.cpp  dom_path.hpp  dom_string.cpp  dom_string.hpp  domain_sources.cmake  error_message.cpp  error_message.hpp  file_reader.cpp  file_reader.hpp  file_writer.hpp  log.hpp  math.cpp  math.hpp  metaprogramming.hpp  pair.hpp  path.cpp  path.hpp  string.cpp  string.hpp
sources/file_data/: file.cpp  file.hpp  parser.cpp  parser.hpp  path.cpp  path.hpp  variable_storage.cpp
sources/main/: CMakeLists.txt  flags.hpp  main.cpp  main_sources.cmake  path.hpp
